# flexconf

./: .gitignore  ChangeLog  Doxyfile  Makefile.am  Makefile.dist  config.h  configure.ac  do_autoconf  flexconf.kdev4  flexconf.kdevelop  flexconf.sln  flexconf.vcproj  test.dsp  tkdiff.sh
debian/: .cvsignore  changelog  control  copyright  dirs  flexconf.install  flexconf.manpages  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules
doc/: flexconf.txt
rpm/: flexconf.spec
script/: strcode.pl
src/: .cvsignore  Makefile.am  generator.cpp  generator.h  genstrngrepl.cpp  genstrngrepl.h  grammar.cxx  grammar.h  grammar.yxx  lexical.c32  lexical.cxx  lexical.lxx  main.cpp  misc.cpp  misc.h  yystype.h
src/gencust/: Makefile.am  gencust.cpp  gencust.h  genxml.src  json.src  libxml2.src  template.src  winreg.src  xmlconf.src
src/genreg/: Makefile.am  genreg.cpp  genreg.h
src/genxml/: .cvsignore  Makefile.am  deserialize.cpp  deserialize.h  disclaimer.h  genxml.cpp  genxml.h  progstr.cxx  readxml.h  serialize.cpp  serialize.h  strcode.awk  strcode.pl  testread.cpp  types.h  writexml.h
src/genxml/code/: deserialize.cpp  deserialize.h  disclaimer.h  genxml.cpp  readxml.h  serialize.cpp  serialize.h  types.h  writexml.h
src/test/: .cvsignore  Makefile.am  json.txt  registry.cpp  registry.h  test.cpp  test.h  test.sh  test.vcproj  test.xml  testjson.cpp  testlibxml2.cpp  testreg.cpp  testxmlconf.cpp
src/test/old/: struct.h  structdes.cpp  structser.cpp
