#   flexconf - flexible configuration generator
#   Copyright (C) 2008 Holger Böhnke
#
#   This file is part of flexconf.
#
#   Flexconf is free software: you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation, either version 3 of the License, or
#   (at your option) any later version.
#
#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.

#---------------------------------------------------------------------------------
# define subdirs to be made here

# SUBDIRS =



#---------------------------------------------------------------------------------
# define your output targets here

# programs installed in bin
noinst_LIBRARIES = libgencust.a



#---------------------------------------------------------------------------------
# sources needed for the the targets defined above

libgencust_a_SOURCES = \
  gencust.cpp



#---------------------------------------------------------------------------------
# sources needed for the the targets but not in the distribution

nodist_libgencust_a_SOURCES =



#---------------------------------------------------------------------------------
# other files needed to be in the distribution

EXTRA_DIST = \
  gencust.h \
  genxml.src



#---------------------------------------------------------------------------------
# compiler flags needed for the the targets defined above

#AM_CXXFLAGS = -g
